// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    342
     
    expenses
     totalling 
    $34,234,234.32
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $0.33
  </p>
</div>
`;
